added favicon, created a function that will take the users recent data and display recommendat ions. added it to profile.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="icon/ico" sizes="48x48" href="./favicon.ico"/>    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
@@ -23,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Spotify Profile Display</title>
+    <title>Sound Safari</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
